# Cloud_computing

./: setup.cfg  setup.py
scenarios/: scenario_10_movies  scenario_1_movie  scenario_20_movies  scenario_30_movies  scenario_3_movies  scenario_3_movies_short  scenario_50_movies  scenario_8_movies  scenario_test_1
src/: run-grpc-tools.sh
src/dacirco/: controller.py
src/dacirco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dacirco/analytics/: get_node_stats.py  process_event_logs.py
src/dacirco/client/: client.py
src/dacirco/grpc_service/: events.py  server.py
src/dacirco/load_generator/: play_scenario.py  play_wait_scenario.py  scenario_generator.py
src/dacirco/proto/: dacirco.proto  dacirco_pb2.py  dacirco_pb2.pyi  dacirco_pb2_grpc.py
src/dacirco/rest_api/: rest_api.py  rest_api_schema.py
src/dacirco/rest_monitor/: monitor.py
src/dacirco/scheduler/: dacirco_dataclasses.py  event_logger.py  pod_manager.py  request_tracker.py  runner_manager.py  scheduler.py  tc_worker_handler.py  vm_manager.py  worker_tracker.py
src/dacirco/tc_worker/: tc_worker.py
