# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.readthedocs.io/en/stable/userguide/declarative_config.html

[metadata]
name = dacirco
description = Add a short description here!
author = Alberto Blanc, Christophe Couturier, Jean-Pierre Le Narzul
author_email = alberto.blanc@imt-atlantique.fr, christophe.coutuier@imt-atlantique.fr, JP.LeNarzul@imt-atlantique.fr
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
# url = https://github.com/pyscaffold/pyscaffold/
# Add here related links, for example:
# project_urls =
    # Documentation = https://pyscaffold.org/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    click==8.1.3
    grpcio==1.50.0
    grpcio-tools==1.50.0
    mypy-protobuf==3.4.0
    protobuf==4.21.8
    six==1.16.0
    types-futures==3.3.8
    types-protobuf==3.20.4.1
    openstacksdk==0.102.0
    minio==7.1.12
    docker==6.0.0
    fastapi==0.85.1
    numpy==1.23.4
    kubernetes==24.2.0
    tabulate==0.9.0
    pandas==1.5.1
    httpx
    uvicorn[standard]
    

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install dacirco[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = dacirco.module:function
# For example:
# console_scripts =
#     fibonacci = dacirco.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
console_scripts =
    dacirco_controller = dacirco.controller:run
    dacirco_client = dacirco.client.client:submit_request
    dacirco_tc_worker = dacirco.tc_worker.tc_worker:start_tc_worker
    dacirco_rest_api = dacirco.rest_api.rest_api:run_rest_api
    dacirco_scenario = dacirco.load_generator.play_scenario:run
    dacirco_wait_scenario = dacirco.load_generator.play_wait_scenario:play_wait_scenario
    dacirco_process_log = dacirco.analytics.process_event_logs:process_event_log
    dacirco_get_node_stats = dacirco.analytics.get_node_stats:process_csv_file
    dacirco_rest_monitor = dacirco.rest_monitor.monitor:run_rest_monitor

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov dacirco --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1
package = dacirco
